# recipe-plus

./: .gitignore  Cargo.toml  Containerfile  README.md  run.py
.github/workflows/: build.yml  clippy.yml  coverage.yml  test.yml
api/: Cargo.toml  test.py
api/src/: schema.rs
api/tests/: .gitignore  cucumber.json  pnpm-lock.yaml
api/tests/features/: recipe.feature
api/tests/features/support/recipe/: steps.js
api/tests/features/support/status/: steps.js
recipe-plus/: Cargo.toml  Trunk.toml  index.html  nginx.conf
recipe-plus-api/: Cargo.toml  test.py
recipe-plus-api/migrations/2023-12-15-015813_create_recipes/: down.sql
recipe-plus-api/src/: errors.rs  main.rs  models.rs  responses.rs
recipe-plus-api/src/controllers/: recipe.rs
recipe-plus-api/tests/: cucumber.json  package.json  pnpm-lock.yaml
recipe-plus-api/tests/features/: recipe.feature  status.feature
recipe-plus-api/tests/features/support/recipe/: steps.js
recipe-plus-server/: Cargo.toml
recipe-plus-server/migrations/2023-12-15-015813_create_recipes/: up.sql
recipe-plus-server/src/: lib.rs  main.rs  schema.rs
recipe-plus-web/: .prettierrc.json  nuxt.config.ts  tailwind.config.ts
recipe-plus/src/: main.rs
src/: app.rs  main.rs
web/: package.json  pnpm-lock.yaml
