[package]
name = "recipe-plus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = "0.5.0"
